Checkout branch master of bundles/old_navigation

--- a/source.yml
+++ b/source.yml
@@ -3,7 +3,7 @@ name: old_navigation
 version_control:
     - bundles/old_navigation: 
         dfkigit: rdominguez/old_navigation
-        branch: stable
+        branch: master
     - bundles/old_navigation/models/orogen/nav_planner:
         dfkigit: rdominguez/nav_planner-deployment
         branch: master
