Limbo checkout and builds (bug with pkg.depends but now builds)

--- a/source.yml
+++ b/source.yml
@@ -27,3 +27,4 @@ version_control:
     - learning/limbo:
         github: resibots/limbo
         branch: master
+        patches: $AUTOPROJ_SOURCE_DIR/patches/Fixes-to-find-the-dependencies-of-limbo-in-a-rock-in.patch
